# PrivategatewayInwzaa007

./: .gitignore  CODEX_SAFE_READ_MILESTONE_PLAN.md  PROJECT_OVERVIEW.md  README.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml
.github/workflows/: ci.yml
integration_tests/: test_package_boundaries.py
plugins/privategateway-safe-read/: .mcp.json
privategateway/: __init__.py  agent_plugin.py  audit.py  cli.py  config.yaml  core.py  custom_recognizers.py  file_inputs.py  import_pipeline.py  key_provider.py  masker.py  mcp_server.py  override_validation.py  policy.py  policy_generator.py  presidio_detector.py  redaction_report.py  safe_read_policy.py  scanner.py  schema_detector.py  secret_scanner.py  secure_store.py  setup.py  tokenizer.py
privategateway/templates/: AGENTS.privategateway.md  privategateway.mcp.json
privategateway/tests/: conftest.py  test_audit.py  test_core_facade.py  test_file_inputs.py  test_ipc_contract.py  test_policy_generator.py  test_residual_scan.py  test_sealed_analytics.py  test_secure_store.py  test_streaming_session.py
privategateway_harness/: __init__.py  artifact_registry.py  cli.py  config.py  contracts.py  data_guard.py  dispatcher.py  errors.py  gateway_backend.py  mcp_server.py  path_policy.py  policy_review.py  runtime.py  session_store.py  tool_broker.py
privategateway_harness/tests/: test_artifact_registry.py  test_cli.py  test_contracts.py  test_hardening.py  test_mcp_server.py  test_policy_review.py  test_runtime.py  test_safe_rows.py  test_session_store.py  test_tool_broker.py
tools/: benchmark_synthetic_excel.py
(+3 files in other folders)
